--- a/HeroesTutorials/package.json
+++ b/HeroesTutorials/package.json
@@ -18,13 +18,13 @@
     "@angular/animations": "~5.0.0",
     "@angular/common": "~5.0.0",
     "@angular/compiler": "~5.0.0",
-    "@angular/compiler-cli": "~5.0.0",
+    "@angular/compiler-cli": "^5.0.5",
     "@angular/core": "~5.0.0",
     "@angular/forms": "~5.0.0",
     "@angular/http": "~5.0.0",
     "@angular/platform-browser": "~5.0.0",
     "@angular/platform-browser-dynamic": "~5.0.0",
-    "@angular/platform-server": "~5.0.0",
+    "@angular/platform-server": "^5.0.5",
     "@angular/router": "~5.0.0",
     "@angular/upgrade": "~5.0.0",
     "angular-in-memory-web-api": "~0.5.0",
