--- a/Todo/package.json
+++ b/Todo/package.json
@@ -24,6 +24,7 @@
     "angular-in-memory-web-api": "^0.5.3",
     "angular2-uuid": "^1.1.1",
     "core-js": "^2.4.1",
+    "rimraf": "^2.6.2",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
