--- a/Todo/package.json
+++ b/Todo/package.json
@@ -20,9 +20,10 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "angular-in-memory-web-api": "^0.11.0",
+    "angular-in-memory-web-api": "^0.5.4",
     "angular2-uuid": "^1.1.1",
-    "rxjs": "~6.5.4",
+    "rxjs": "^6.5.5",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
   },
